[bumpversion]
current_version = 0.1.14
commit = True
tag = True
tag_name = v{new_version}

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/rabird/winio.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

