[bumpversion]
current_version = 0.2.6
commit = True
tag = True
tag_name = v{new_version}

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/rabird/winio.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 0

[flake8]
exclude = docs

[aliases]
test = pytest

